--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animated site</title>
+    <link rel="icon" href="./app/assets/logo.png">
     <link rel="stylesheet" href="./app/css/style.css">
 </head>
 <body>
